# SpaceBusOS

./: .gitignore  Cargo.toml  Contributing.md  README.md  configuration.nix  data.txt  default.nix  devshell.toml  go.mod  go.sum  home.nix  index.html  install.sh  laptop-install-root.sh  laptop-install.sh  main.go  result  sbos-install  sbos-prompt  shell.nix
Editions/: README.md
Editions/Desktop/: SpaceBusDesktop.toml
Editions/Desktop/config/: README.md  bedrock.conf
Editions/Desktop/nvim/: init.vim
Editions/Laptop/: configuration.nix  home.nix  result  starship.toml
Editions/Laptop/config/: SpaceBusOS-Configuration.nix  configuration.nix  spacebusos-configuration.nix
Editions/Laptop/fish/: config.fish  fish_variables
Editions/Phone/: configuration.nix  home.nix
Editions/dr460nized/: dr460nized.toml
Editions/dr460nized/config/: bedrock.conf
config/: plasma-org.kde.plasma.desktop-appletsrc
config/kde.org/: README.md  UserFeedback.org.kde.discover.conf  UserFeedback.org.kde.plasmashell.conf  mobile.plasmasettings.conf
containers/: kali.nix
docs/: index.html
scripts/: startup.sh
src/: command_check.rs  config.rs  install.rs  main.rs  ui.rs
