[package]
name = "spacebusos-rs-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

toml = "0.5"
clap = "2.33.3"
run_script = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.44"

[dependencies.rustbox]
git = "https://github.com/gchp/rustbox.git"
